# sharpscale

./: CHANGELOG.md  CMakeLists.txt  README.md  config.c  config.h  exports.yml  main.c  scedisplay.h  sharpscale.c  sharpscale.h  sharpscale_internal.h
config-app/: CMakeLists.txt  main.c
include/: common.h  sharpscale.h  sharpscale_internal.h
scaling-test/: CMakeLists.txt  main.c
